# OTUS_basic_homeworks

./: .gitlab-ci.yml  README.md  conftest.py  phonebook.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: pylint.yml  pytest.yml
helpers/: utils.py
homework_01/: phonebook.py  readme.md
homework_01/jsons/: users_rus.json  users_short.json
homework_02/: main.py  phonebook_func.py  pytest.ini  readme.md  requirements.txt
homework_02/book/: __init__.py  contact.py  phone_book.py
homework_02/json/: users_full.json  users_short.json  users_short_copy.json
homework_02/mvc/: controller.py  json_handler.py  model.py  view.py
homework_02/resources/: strings.py
homework_02/tests/: conftest.py  readme.md  test_controller.py  test_json_handler.py  test_model.py  test_phone_book.py  test_view.py
homework_03/: .dockerignore  Dockerfile  __init__.py  requirements.txt  start_uvicorn.py
homework_03/app/: main.py
homework_03/src/: main.py
homework_04/: __init__.py  alembic.ini  config.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt
homework_04/alembic/: env.py
homework_04/db/: __init__.py  db_async.py  dependencies.py  post_crud.py  user_crud.py
homework_04/fetchAPI/: __init__.py  jsonplaceholder_requests.py
homework_04/models/: post.py  user.py
homework_04/schemas/: __init__.py  post.py  user.py
homework_05/: __init__.py  app.py  requirements.txt
homework_05/app/: main.py
homework_05/templates/: base.html
homework_06/: docker-compose.yaml  pyproject.toml
homework_06/fastapi-app/: app.py  config.py
homework_07/: README.md
homework_07/config/: settings.py
homework_07/store_app/: models.py  views.py
homework_08/: README.md  requirements.txt
homework_08/store_app/: admin.py  forms.py  (+3 more)
homework_09/: README.md  requirements.txt
homework_10/: README.md  requirements.txt
homework_11/: README.md  requirements.txt
json/: users_full.json  users_rus.json  users_short.json
(+67 files in other folders)
