[tool.poetry]
name = "otus-basic-homeworks"
version = "0.1.0"
description = ""
authors = ["ka4en3"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pydentic = "^0.0.1.dev3"
jinja2 = "^3.1.4"
black = "^25.1.0"
aiohttp = "^3.11.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
