[tool.poetry]
name = "otus-basic-homeworks"
version = "0.1.0"
description = ""
authors = ["ka4en3"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
gunicorn = "^23.0.0"
pydantic = { extras = ["email"], version = "^2.10.6" }
pydantic-settings = "^2.7.1"
jinja2 = "^3.1.4"
aiohttp = "^3.11.11"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.37" }
alembic = "^1.14.1"
psycopg = "^3.2.4"
psycopg-binary = "^3.2.4"
asyncpg = "^0.30.0"
annotated-types = "^0.7.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
