[tool.poetry]
name = "otus-basic-homeworks"
version = "0.1.0"
description = ""
authors = ["ka4en3"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.115.8"
uvicorn = ">=0.34.0"
gunicorn = ">=23.0.0"
pydantic = ">=2.10.6"
pydantic-settings = ">=2.8.0"
jinja2 = ">=3.1.6"
aiohttp = ">=3.11.12"
sqlalchemy = ">=2.0.38"
alembic = ">=1.14.1"
psycopg = ">=3.2.4"
psycopg-binary = ">=3.2.4"
asyncpg = ">=0.30.0"
annotated-types = ">=0.7.0"
celery = {extras = ["redis"], version = "^5.4.0"}
django-celery-results = "^2.5.1"
pytest = ">=8.3.5"
pytest-django = ">=4.10.0"
pytest-mock = ">=3.14.0"
beautifulsoup4 = ">=4.13.3,<4.14.0"
faker = ">=37.0.1"
django = ">=5.1.7"
eventlet = "^0.39.1"
gevent = "^24.11.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
